changed vw to % to fix bug where images not showing on load correctly

--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ h4 {
     margin-top: 5%;
     margin-bottom: 5%;
 }
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .sites {
     display: inline-block;
     width: 40vw;
@@ -57,17 +57,18 @@ h4 {
 }
 
 .siteImage {
-  width: 80vw;
+  width: 100%;
   height: 100%;
+  margin-left: 10px;
     border:1px solid #aaa;
     -webkit-box-shadow:3px 3px 4px #888;
        -moz-box-shadow:3px 3px 4px #888;
             box-shadow:3px 3px 4px #888;
 }
-@media (min-width: 768px) {
+@media (min-width: 800px) {
     .siteImage {
         height: 100%;
-        width: 38vw;
+        width: 50%;
         vertical-align: top;
     }
 }
@@ -80,11 +81,11 @@ h4 {
   display: inline-block;
   padding-top: 15px;
 }
-@media (min-width: 768px) {
-    .description {
-      width: 38vw;
-      text-align: center;
-    }
+@media (min-width: 800px) {
+  .description {
+    width: 38vw;
+    text-align: center;
+  }
 }
 .line {
   margin-top: 5px;
@@ -93,7 +94,7 @@ h4 {
   width: 85%;
   padding-left: 20%;
 }
-@media (min-width: 768px) {
+@media (min-width: 800px) {
 .line {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -149,7 +150,7 @@ h4 {
 @keyframes fadeIn2 { from { opacity:0; } to { opacity:1; } }
 
 
-/*.fade-in {
+.fade-in {
 	opacity:0;  /* make things invisible upon start */
 
 -webkit-animation:fadeIn ease-in 0.5s;
@@ -227,14 +228,13 @@ animation-duration:1s;
     animation-delay: 1s;
     ;
     -webkit-animation-fill-mode: forwards;
-    /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-webDev
+
     -moz-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
     -webkit-animation-duration: 1s;
     -moz-animation-duration: 1s;
     animation-duration: 1s;
-}*/
+}
 .middle {
     position: absolute;
     width: 80%;
@@ -296,7 +296,7 @@ webDev
 #rollingAdventureModal .modal-content {
     width: 95vw;
 }
-@media (min-width: 767px) {
+@media (min-width: 800px) {
 #rollingAdventureModal .modal-content {
     width: 200%;
     margin-left: -50%;
@@ -380,9 +380,7 @@ webDev
     padding: -5px;
     width: 100px;
 }
-.nav-custom.affix .navbar-collapse {
-    /*top: 60px;*/
-}
+
 .nav>li>a:hover, .nav>li>a:focus {
     background-color: transparent;
 }
@@ -405,7 +403,7 @@ button {
 .padding100, .padding200 {
     padding-bottom: 50px;
 }
-@media (min-width: 768px) {
+@media (min-width: 800px) {
     .padding100 {
         padding-bottom: 100px;
     }
@@ -445,7 +443,7 @@ button {
         outline: none;
     }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
     .navbar-collapse {
         width: 50px;
         position: fixed;
@@ -502,7 +500,7 @@ button {
         font-size: 130%;
     }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
 .profilePic {
     float: right;
     border-radius: 50%;
@@ -516,7 +514,7 @@ button {
   margin: 10px;
   /*padding-right: 25px;*/
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
 .aboutContent {
     display: inline-block;
     /*overflow: auto;*/
@@ -569,7 +567,7 @@ button {
   transition: all 200ms ease-in;
   transform: scale(1);
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .leftLinks {
     float: left;
     width: 80%;
@@ -615,7 +613,7 @@ button {
     transition: all 300ms ease-in;
     transform: scale(1.05);
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
 .leftLinks:hover {
     width: 80%;
     border-radius: 5px;
